# compiler

./: CMakeLists.txt  README.md
fuzz_test/: CMakeLists.txt
fuzz_test/lexical_analysis/: lexical_analyzer_fuzzing.cpp
fuzz_test/semantic_analysis/: s_attributed_sdd_fuzzing.cpp
src/: exception.hpp  operator.hpp  token.hpp  type_expression.cpp  type_expression.hpp
src/algorithm/: value_number_method.hpp
src/example_grammar/: declaration_sdd.cpp  declaration_sdd.hpp  expression_three_address_code_sdd.cpp  expression_three_address_code_sdd.hpp  grammar.cpp  grammar.hpp  lexical_analyzer.cpp  lexical_analyzer.hpp
src/intermediate_code_generation/: three_address_code.hpp
src/intermediate_representation/: syntax_tree.hpp  three_address_code.cpp  three_address_code.hpp
src/lexical_analysis/: lexical_analyzer.cpp  lexical_analyzer.hpp
src/semantic_analysis/: grammar_symbol_attribute.cpp  grammar_symbol_attribute.hpp  grammar_symbol_attribute_name.cpp  grammar_symbol_attribute_name.hpp  l_attributed_sdd.cpp  l_attributed_sdd.hpp  s_attributed_sdd.cpp  s_attributed_sdd.hpp  sdd.cpp  sdd.hpp  sdd_attribute_name.cpp  sdd_attribute_name.hpp  syntax_tree.cpp  syntax_tree.hpp  three_address_code_sdd.cpp  three_address_code_sdd.hpp  type_expression.cpp  type_expression.hpp
src/symbol_table/: constant_table.cpp  constant_table.hpp  symbol_table.cpp  symbol_table.hpp
src/token/: token.hpp
test/: CMakeLists.txt
test/intermediate_representation/: syntax_tree_test.cpp  three_address_code_test.cpp
test/lexical_analysis/: lexical_analyzer_test.cpp
test/semantic_analysis/: l_attributed_sdd_test.cpp  s_attributed_sdd_test.cpp  syntax_tree_test.PVS-Studio.i  syntax_tree_test.cpp  three_address_code_test.cpp  type_expression_test.1.PVS-Studio.cfg  type_expression_test.1.PVS-Studio.i  type_expression_test.cpp
